--- a/nginx.conf
+++ b/nginx.conf
@@ -2,16 +2,48 @@ server {
     listen 80;
     server_name localhost;
 
+    return 301 https://$host$request_uri;  # 这里应该是 $request_uri 而不是 $request_url
+}
+
+server {
+    listen 443 ssl;
+    server_name localhost;
+
+    ssl_certificate /etc/nginx/ssl/pub.pem;     # 证书文件路径
+    ssl_certificate_key /etc/nginx/ssl/key.pem;   # 私钥文件路径
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+
     location / {
         root /usr/share/nginx/html;
         index index.html;
         try_files $uri $uri/ /index.html;
     }
 
-    # 将 API 请求代理到后端服务
-    location /api/ {
-        proxy_pass http://backend:8080/;
+    location /ws {
+        proxy_pass http://localhost:8080/ws;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # WebSocket 连接可能需要较长的超时时间
+        proxy_read_timeout 3600s;
+        proxy_send_timeout 3600s;
+    }
+    # 将 API 请求代理到后端服务
+    location /api/ {
+        proxy_pass http://localhost:8080/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;  # 建议添加
+        proxy_set_header X-Forwarded-Proto $scheme;                   # 建议添加
     }
 }
